--- a/CA2_Ida_Tehlarova/CA2_Ida_Tehlarova/CA2_Ida_Tehlarova.vcxproj
+++ b/CA2_Ida_Tehlarova/CA2_Ida_Tehlarova/CA2_Ida_Tehlarova.vcxproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <ClInclude Include="BinaryTree.h" />
     <ClInclude Include="BSTNode.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="TreeMap.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
